--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "es5-shim": "~3.1.0",
     "angular-resource": "~1.2.0",
     "angular-sanitize": "~1.2.0",
-    "angular-route": "~1.2.0"
+    "angular-route": "~1.2.0",
+    "foundation": "~5.4.7"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
