--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-resource": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
-    "foundation": "~5.4.7"
+    "foundation": "~5.4.7",
+    "d3": "~3.4.13"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
