--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
     "foundation": "~5.4.7",
-    "d3": "~3.4.13"
+    "d3": "~3.4.13",
+    "underscore": "~1.7.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
