--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "financiamientoclimatico",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "gzippo": "^0.2.0",
+    "express": "^4.4.3",
+    "morgan": "^1.1.1"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-autoprefixer": "^0.7.3",
