--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular-route": "~1.2.0",
     "foundation": "~5.4.7",
     "d3": "~3.4.13",
-    "underscore": "~1.7.0"
+    "underscore": "~1.7.0",
+    "humanize-plus": "~1.5.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
