--- a/bower.json
+++ b/bower.json
@@ -8,10 +8,10 @@
     "angular-resource": "~1.2.0",
     "angular-sanitize": "~1.2.0",
     "angular-route": "~1.2.0",
-    "foundation": "~5.4.7",
     "d3": "~3.4.13",
     "underscore": "~1.7.0",
-    "humanize-plus": "~1.5.0"
+    "humanize-plus": "~1.5.0",
+    "angular-foundation": "~0.5.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
