--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,8 @@
     "d3": "~3.4.13",
     "underscore": "~1.7.0",
     "humanize-plus": "~1.5.0",
-    "angular-foundation": "~0.5.1"
+    "angular-foundation": "~0.5.1",
+    "angular-utils-pagination": "~0.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
