--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,10 @@
     "underscore": "~1.7.0",
     "humanize-plus": "~1.5.0",
     "angular-foundation": "~0.5.1",
-    "angular-utils-pagination": "~0.4.0"
+    "angular-utils-pagination": "~0.4.0",
+    "highcharts-ng": "~0.0.8",
+    "highcharts": "~4.1.7",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
